--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -59,6 +59,11 @@
     background-color: var(--light-sky);
 }
 /* 1st section */
+.f-main{
+    font-size: var(--fs-70);
+    font-weight: var(--fw-500);
+    color: var(--white);
+}
 .bg-dark-blue{
     background-color: var(--dark-blue);
 }
